--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,8 @@
     "require": {
         "php": "^8.2",
         "backpack/crud": "^6.7",
+        "backpack/pro": "2.0",
+        "backpack/permissionmanager": "^7.2",
         "backpack/theme-tabler": "^1.2",
         "laravel/framework": "^11.9",
         "laravel/sanctum": "^4.0",
@@ -71,5 +73,11 @@
         }
     },
     "minimum-stability": "stable",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "repositories":[
+        {
+            "type": "composer",
+            "url": "https://repo.backpackforlaravel.com/"
+        }
+    ]
 }
